w: App mit bulma formatiert

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,10 +27,10 @@ $family-sans-serif: 'Noto Sans', sans-serif;
 
 // Import only what you need from Bulma
 @import 'bulma/sass/base/_all.sass';
-@import 'bulma/sass/elements/button.sass';
-@import 'bulma/sass/elements/container.sass';
-@import 'bulma/sass/elements/form.sass';
-@import 'bulma/sass/elements/title.sass';
+@import 'bulma/sass/elements/_all.sass';
+@import 'bulma/sass/form/_all.sass';
+@import 'bulma/sass/grid/_all.sass';
+@import 'bulma/sass/helpers/_all.sass';
 @import 'bulma/sass/components/navbar.sass';
 @import 'bulma/sass/layout/hero.sass';
 @import 'bulma/sass/layout/section.sass';
