--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 }
 
 .mainframe {
-  padding-left: 1.5rem;
-  padding-top: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
   height: 100vh;
   background-color: #fdfdfd;
 }
